Fix theme color (#316)
* Fix theme color not working in basic, enhanced, and biometric for some ng id types

* Fix lint

* debug agent mode not showing

* remove log

* Update change log

--- a/packages/embed/src/css/styles.css
+++ b/packages/embed/src/css/styles.css
@@ -327,6 +327,7 @@ button[data-type='icon'] {
 
 .back-button-text {
   line-height: 1;
+  font-size: 14px;
   color: rgb(21, 31, 114);
 }
 
